Fix font size and navbar alignment

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
+Style:
 html body {
   margin: 0;
   padding: 0;
   background-color: #ffffff;
-  font-size: 18px;
+  font-size: 13px;
   font-family: Arial;
 }
 
@@ -25,9 +26,15 @@ li {
   float: right;
 }
 
+.navbar .leftlist{
+  height: 40px;
+  display:flex;
+  align-items: center;
+}
+
 .navbar{
   padding: 15px;
-  height: 60px;
+  height: 40px;
 }
 
 img {
@@ -37,8 +44,8 @@ img {
 }
 
 #signinlogo {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
 }
 
@@ -47,8 +54,8 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 200px;
-  width: 400px;
+  margin-top: 100px;
+  width: 300;
 }
 
 input {
@@ -56,11 +63,11 @@ input {
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
-  width: 800px;
+  width: 600px;
   height: 3em;
   background-color;
   padding-left: 16px;
-  font-size: 20px;
+  /* font-size: 20px; */
   border: 1px;
   box-shadow: 0 2px 6px #bfbfbf;
 }
@@ -72,8 +79,9 @@ button {
   color: rgb(117, 117, 117);
   background-color:rgb(242, 242, 242);
   height: 3em;
-  width: 180px;
-  font-size: 18px;
+  width: 160;
+  margin: 0 8;
+  /* font-size: 18px; */
   border: 2px;
   border-radius: 4px;
 }
@@ -101,11 +109,15 @@ footer {
   color: rgba(0,0,0,.54);
   border-top: 1px solid #d2d2d2;
   height: 1.3em;
-  padding: 15px 0;
-  vertical-align: middle;
-  font-size: 20px;
+  padding: 10px 0;
+  /* vertical-align: middle; */
+  /* font-size: 20px; */
 }
 
 .foot{
   color: #777;
+}
+
+.foot .rightlist {
+  padding-right: 25px;
 }
